--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
- /* Navigation Bar  */
+/* Navigation Bar  */
 .navbar-brand {
   color: rgb(255, 255, 255);
 }
@@ -36,6 +35,7 @@
   padding-top: 5%;
 
 }
+
 .center-text {
   text-align: center;
 }
@@ -44,8 +44,15 @@
 .card-title {
   font-size: medium;
 }
-.featured-card{
-  background-color: rgba(0,0,0,0);
+
+.featured-card {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.rounded-circle {
+
+  width: 100px;
+  height: 100px;
 }
 
 
@@ -68,12 +75,13 @@
   border-width: 0;
 }
 
-.touch-header{
+.touch-header {
   font-weight: normal;
   font-size: xx-large;
   margin: 0%;
 }
-.touch-body{
+
+.touch-body {
 
   font-weight: bold;
 }
